--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -328,8 +328,8 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu" style="display: none;">
-            <li><a href="{% url 'projectsList' %}"><i class="fa fa-laptop"></i> <span>Lista de sensores</span></a></li>
-            <li><a href="{% url 'projectsNew' %}"><i class="fa fa-laptop"></i> <span>Nuevo sensor</span></a></li>
+            <li><a href="{% url 'sensorTypeList' %}"><i class="fa fa-laptop"></i> <span>Lista de sensores</span></a></li>
+            <li><a href="{% url 'sensorTypeNew' %}"><i class="fa fa-laptop"></i> <span>Nuevo sensor</span></a></li>
           </ul>
         </li>
 
