--- a/dashboard/templates/admin/admin_sensorType_create.html
+++ b/dashboard/templates/admin/admin_sensorType_create.html
@@ -58,7 +58,7 @@
         <!-- /.box-body -->
         <div class="box-footer">
           <a href="{% url 'enterprise-client:client-list' %}" class="btn btn-default">Regresar</a>
-          <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Agregar {% endif %} Cliente</button>
+          <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Agregar {% endif %} Sensor</button>
         </div>
         <!-- /.box-footer -->
         </form>
