--- a/dashboard/templates/admin/admin_sensorType_detail.html
+++ b/dashboard/templates/admin/admin_sensorType_detail.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        ADMIN - SENSOR -  DETALLE -  {{sensorType.name }}
+        ADMIN - SENSOR -  DETALLE -  {{sensortype.name }}
         <small>LISTA DE SENSORES</small>
 
       </h1>
@@ -31,109 +31,52 @@
       <div class="box box-solid">
         <div class="box-header with-border">
           <i class="fa fa-adjust"></i>
-          <h3 class="box-title">Información del Sensor:  <b>{{sensorType.name }}</b></h3>
+          <h3 class="box-title">Información del Sensor:  <b>{{sensortype.name }}</b></h3>
         </div><!-- /.box-header -->
         <div class="box-body">
           <dl class="dl-horizontal">
-            <dt>Sensor</dt>
+            <dt>Nombre del Sensor</dt>
             <dd>
               <a href="#" target="_self">
-                {{sensorType.name }}
+                {{sensortype.name }}
               </a>
             </dd>
             <dt>ID Sensor</dt>
             <dd>
-              <a href="#" target="_self">
-                {{sensorType.id }}
-              </a>
+                {{sensortype.id }}
             </dd>
+
+            <dt>Descripción</dt>
+            <dd>
+                {{sensortype.description }}
+            </dd>
+
+            <dt>Prefijo del Sensor</dt>
+            <dd>
+                {{sensortype.prefix }}
+            </dd>
+
+            <dt>Modelo del Sensor</dt>
+            <dd>
+                {{sensortype.model }}
+            </dd>
+
+            <dt>Tipo de dato a enviar</dt>
+            <dd>
+                {{sensortype.get_data_type_display }}
+            </dd>
+
             <dt>Archivo técnico</dt>
-            <dd>{{sensorType.id }}</dd>
+            <dd> {{sensortype.data_sheet }} </dd>
+
+            <dt>Foto del Sensor</dt>
+            <dd> {{sensortype.data_image }} </dd>
+
           </dl>
         </div><!-- /.box-body -->
       </div><!-- /.box -->
     </div>
   </div><!-- /.row -->
-
-
-<!-- /.CRUD PARA LOS ARDUINOS DEL PROYECTO -->
-
-<div class="row">
-  <div class="col-xs-12">
-    <div class="box">
-      <div class="box-header">
-        <h3 class="box-title">Lista d Sistemas Instalados</h3>
-      </div><!-- /.box-header -->
-      <div class="box-body">
-        <table id="table_projects" class="table table-bordered table-striped">
-          <thead>
-            <tr>
-              <th>ID Sistema</th>
-              <th>Nombre Sistema </th>
-              <th>Ubicación</th>
-              <th>Fecha Creación</th>
-              <th>Estatus</th>
-              <th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for arduino in arduinos %}
-            <tr>
-
-              <td>{{arduino.id}}</td>
-              <td>{{arduino.name}}</td>
-              <td>{{arduino.location}}</td>
-              <td>{{arduino.created_at}}</td>
-
-              {% if  project.id|isEven == 0%}
-                <td> <span class="label label-danger">Pendiente Success</span> </td>
-              {% else %}
-                <td> <span class="label label-success">Estatus Correcto</span> </td>
-              {% endif %}
-
-              <td>
-                <div class="btn-group">
-                  <a href="/dash/admin/iot/detail/{{arduino.id}}" target="_self">
-                    <button  type="button" class="btn btn-success">Ver</button>
-                  </a>
-                  <a href="{% url 'arduinoSensorsEdit' pk=arduino.id %}" target="_self">
-                    <button  type="button" class="btn btn-info">Editar</button>
-                  </a>
-                  <a href="/dash/admin/iot/delete/{{arduino.id}}" target="_self">
-                    <button type="button" class="btn btn-danger">Borrar</button>
-                  </a>
-                </div>
-              </td>
-
-            </tr>
-            {% endfor %}
-          </tbody>
-
-          <tfoot>
-            <tr>
-              <th>ID Sistema</th>
-              <th>Nombre Sistema </th>
-              <th>Ubicación</th>
-              <th>Fecha Creación</th>
-              <th>Estatus</th>
-              <th>Acciones</th>
-            </tr>
-          </tfoot>
-        </table>
-      </div><!-- /.box-body -->
-    </div><!-- /.box -->
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-xs-12">
-    <div class="box">
-      <a href="{% url 'newArduino' project_pk=project.id %}">
-        <button class="btn btn-block btn-info btn-lg">Agregar Sistema</button>
-      </a>
-    </div>
-  </div>
-</div>
 
 <!-- /.END PARA LOS ARDUINOS DEL PROYECTO -->
   </section>
