--- a/dashboard/templates/admin/admin_sensorType_detail.html
+++ b/dashboard/templates/admin/admin_sensorType_detail.html
@@ -78,6 +78,17 @@
     </div>
   </div><!-- /.row -->
 
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="box">
+        <a href="{% url 'sensorTypeList' %}">
+          <button class="btn btn-block btn-info btn-lg">Regresar a Lista de Sensores</button>
+        </a>
+      </div>
+    </div>
+  </div>
+
+
 <!-- /.END PARA LOS ARDUINOS DEL PROYECTO -->
   </section>
     <!-- /.content -->
