--- a/dashboard/templates/admin/admin_sensorType_list.html
+++ b/dashboard/templates/admin/admin_sensorType_list.html
@@ -94,7 +94,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="box">
-          <a href="/dash/admin/sensorType/new/">
+          <a href= "{% url 'sensorTypeNew' %} " target="_self">
             <button class="btn btn-block btn-info btn-lg">Agregar Sensor</button>
           </a>
         </div>
