--- a/dashboard/templates/admin/admin_sensorType_edit.html
+++ b/dashboard/templates/admin/admin_sensorType_edit.html
@@ -1,6 +1,7 @@
 {% extends 'main_header.html' %}
 {% load staticfiles %}
-{% load arduino_tags %}
+{% load widget_tweaks %}
+
 
 {% block main_content_wrapper %}
 
@@ -9,9 +10,9 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de Sensores
-        <small>VIEW para borrar un elemento</small>
-
+        ADMIN - {% if form.initial %} EDITAR {% else %} CREAR {% endif %}
+         - SENSOR
+        <small>Proyectos</small>
       </h1>
       <ol class="breadcrumb">
         <li>
@@ -19,7 +20,11 @@
             <i class="fa fa-dashboard"></i>
             Home</a>
         </li>
-        <li class="active">Dashboard</li>
+        <li class="active">
+          <a href="#" target="_self">
+            Lista de Sensores
+          </a>
+        </li>
       </ol>
     </section>
 
@@ -29,29 +34,39 @@
     <div class="col-xs-12">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Estas seguro?</h3>
+          <h3 class="box-title">Formulario para Sensores</h3>
         </div><!-- /.box-header -->
+
         <!-- form start -->
-        <h1>Nombre del Sensor: <b> {{sensortype.name}} </b> </h1>
-        <form role="form" action="" method="post" enctype="multipart/form-data">
-          {% csrf_token %}
+        <form class="form-horizontal" role="form" action="" method="post">
+        <div class="box-body">
+            {% csrf_token %}
+            {% for field in form %}
 
-          {{form}}
+            <div class="form-group">
+                <label for="{{ field.label }}" class="col-sm-2 control-label">{{ field.label }}</label>
+                <div class="col-sm-10">
+                   {% render_field field class="form-control" %}
+                </div>
+                <div class="col-sm-offset-2 col-sm-8">
+                   {{field.errors}}
+                </div>
+            </div>
 
-          <div class="box-footer">
-            <a href="#">
-              <button type="cancel" class="btn btn-info">Cancelar</button>
-            </a>
-            <a href="#">
-              <button type="submit" class="btn btn-danger">Borrar</button>
-            </a>
-          </div>
+            {% endfor %}
+        </div>
+        <!-- /.box-body -->
+        <div class="box-footer">
+          <a href="{% url 'sensorTypeList' %}" class="btn btn-default">Regresar</a>
+          <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Agregar {% endif %} Sensor</button>
+        </div>
+        <!-- /.box-footer -->
         </form>
       </div><!-- /.box -->
     </div>
   </div>
 
-    </section>
+  </section>
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
@@ -59,10 +74,6 @@
 {% endblock main_content_wrapper %}
 
 {% block content_js %}
-  <!-- page script -->
-<script type="application/javascript">
 
-
-</script>
 
 {% endblock content_js %}
