--- a/dashboard/templates/admin/admin_sensorType_delete.html
+++ b/dashboard/templates/admin/admin_sensorType_delete.html
@@ -40,10 +40,7 @@
 
           <div class="box-footer">
             <a href="#">
-              <button type="cancel" class="btn btn-info">Cancelar</button>
-            </a>
-            <a href="#">
-              <button type="submit" class="btn btn-primary">Borrar</button>
+              <button type="submit" class="btn btn-danger">Borrar</button>
             </a>
           </div>
         </form>
@@ -51,7 +48,19 @@
     </div>
   </div>
 
-    </section>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="box">
+        <a href="{% url 'sensorTypeList' %}">
+          <button class="btn btn-block btn-info btn-lg">Regresar a Lista de Sensores</button>
+        </a>
+      </div>
+    </div>
+  </div>
+
+
+  </section>
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
