--- a/dashboard/templates/admin/admin_sensorType_delete.html
+++ b/dashboard/templates/admin/admin_sensorType_delete.html
@@ -40,6 +40,7 @@
 
           <div class="box-footer">
             <a href="#">
+              <a href="{% url 'sensorTypeList' %}" class="btn btn-default">Regresar</a>
               <button type="submit" class="btn btn-danger">Borrar</button>
             </a>
           </div>
