Admin Arduino templates and delete fix for projects

--- a/dashboard/templates/admin/admin_arduinowithsensors_update.html
+++ b/dashboard/templates/admin/admin_arduinowithsensors_update.html
@@ -184,13 +184,28 @@
   </div>
 
 <div class="row">
-  <div class="col-xs-6 col-xs-offset-3">
+
+  <div class="col-xs-4 ">
     <button type="submit" class="btn btn-block btn-primary btn-lg">Guardar Cambios</button>
   </div>
 
+</form>
+
+
+
+  <div class="col-xs-4 col-xs-offset-2">
+      <a href="{% url 'projectsList' %}">
+        <button class="btn btn-block btn-default btn-lg">Regresar a Lista de Proyectos</button>
+      </a>
+  </div>
+
+
+
 </div>
 
-  </form>
+
+
+
 </section>
     <!-- /.content -->
   </div>
