--- a/dashboard/templates/admin/admin_arduino_detele.html
+++ b/dashboard/templates/admin/admin_arduino_detele.html
@@ -9,7 +9,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de Proyectos
+        Admin - Control de Sistemas
         <small>VIEW para borrar un elemento</small>
 
       </h1>
@@ -29,10 +29,13 @@
     <div class="col-xs-12">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Estas seguro?</h3>
+          <h1 class="box-title">Estas seguro?</h1>
         </div><!-- /.box-header -->
         <!-- form start -->
-        <h1>Nombre del proyecto: <b> {{project.name}} </b> </h1>
+
+        <h4><b> Nota: </b> El borrar del sistema <b> {{arduino.name}}</b> eliminara todos sus registros hijos que se encuentren asociados con el. </h4>
+
+        <h1>Nombre del proyecto: <b> {{arduino.name}}</b> </h1>
         <form role="form" action="" method="post">
           {% csrf_token %}
 
@@ -41,8 +44,6 @@
           <div class="box-footer">
             <a href="#">
               <a href="{% url 'projectsList' %}" class="btn btn-default">Regresar</a>
-            </a>
-            <a href="#">
               <button type="submit" class="btn btn-danger">Borrar</button>
             </a>
           </div>
@@ -51,7 +52,9 @@
     </div>
   </div>
 
-    </section>
+
+
+  </section>
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
