--- a/dashboard/templates/admin/admin_projects_create.html
+++ b/dashboard/templates/admin/admin_projects_create.html
@@ -57,7 +57,7 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-          <a href="{% url 'enterprise-client:client-list' %}" class="btn btn-default">Regresar</a>
+          <a href="{% url 'projectsList' %}" class="btn btn-default">Regresar</a>
           <button type="submit" class="btn btn-primary">{% if form.initial %}Editar {% else %}Agregar {% endif %} Cliente</button>
         </div>
         <!-- /.box-footer -->
