--- a/dashboard/templates/admin/admin_projects_detail.html
+++ b/dashboard/templates/admin/admin_projects_detail.html
@@ -85,10 +85,10 @@
               <td>{{arduino.location}}</td>
               <td>{{arduino.created_at}}</td>
 
-              {% if  project.id|isEven == 0%}
-                <td> <span class="label label-danger">Pendiente Success</span> </td>
+              {% if  arduino.id|isEven == 0%}
+                <td> <span class="label label-danger">Pendiente</span> </td>
               {% else %}
-                <td> <span class="label label-success">Estatus Correcto</span> </td>
+                <td> <span class="label label-success">Correcto</span> </td>
               {% endif %}
 
               <td>
@@ -108,7 +108,7 @@
             </tr>
             {% endfor %}
           </tbody>
-          
+
           <tfoot>
             <tr>
               <th>ID Sistema</th>
