Add arduino admin  detail

--- a/dashboard/templates/admin/admin_projects_detail.html
+++ b/dashboard/templates/admin/admin_projects_detail.html
@@ -93,7 +93,7 @@
 
               <td>
                 <div class="btn-group">
-                  <a href="/dash/admin/iot/detail/{{arduino.id}}" target="_self">
+                  <a href="{% url '' %}arduino.id}}" target="_self">
                     <button  type="button" class="btn btn-success">Ver</button>
                   </a>
                   <a href="{% url 'arduinoSensorsEdit' pk=arduino.id %}" target="_self">
