--- a/dashboard/templates/admin/admin_projects_list.html
+++ b/dashboard/templates/admin/admin_projects_list.html
@@ -33,7 +33,7 @@
             <table id="table_projects" class="table table-bordered table-striped">
               <thead>
                 <tr>
-                  <th>ID Cliente</th>
+                  <th>ID Proyecto</th>
                   <th>Nombre Cliente</th>
                   <th>Projecto ID/Nombre</th>
                   <th>Fecha Creación</th>
@@ -45,15 +45,17 @@
 
                 {% for project in project_list %}
                 <tr>
-                  <td>00000</td>
+                  <td>00000{{project.id}}</td>
                   <td>Cliente nombre</td>
                   <td>{{project.id}} - {{project.name}}</td>
                   <td> {{project.created_at}} </td>
 
+
+
                   {% if  project.id|isEven == 0%}
-                    <td> <span class="label label-danger">Pendiente Success</span> </td>
+                    <td> <span class="label label-danger">{{project.get_estatus_display }}</span> </td>
                   {% else %}
-                    <td> <span class="label label-success">Estatus Correcto</span> </td>
+                    <td> <span class="label label-success">{{project.get_estatus_display }}</span> </td>
                   {% endif %}
 
                   <td>
@@ -76,7 +78,7 @@
               </tbody>
               <tfoot>
                 <tr>
-                  <th>ID Cliente</th>
+                  <th>ID Proyecto</th>
                   <th>Nombre Cliente</th>
                   <th>Projecto ID/Nombre</th>
                   <th>Fecha Creación</th>
