--- a/templates/system/login/login.html
+++ b/templates/system/login/login.html
@@ -34,7 +34,12 @@
       <a href="../../index2.html"><b>ADU LOGIN</a>
     </div><!-- /.login-logo -->
     <div class="login-box-body">
-      <p class="login-box-msg">Sign in to start your session</p>
+      <p class="login-box-msg">Inicia sesión</p>
+
+      {% if form.errors %}
+          {{ form.errors }} <!-- display the form errors if they exist -->
+      {% endif %}
+
       <form action="." method="post">
         {% csrf_token %}
         <div class="form-group has-feedback">
@@ -49,12 +54,12 @@
           <div class="col-xs-8">
             <div class="checkbox icheck">
               <label>
-                <input type="checkbox"> Remember Me
+                <input type="checkbox"> Recordarme
               </label>
             </div>
           </div><!-- /.col -->
           <div class="col-xs-4">
-            <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+            <button type="submit" class="btn btn-primary btn-block btn-flat">Iniciar Sesión</button>
           </div><!-- /.col -->
         </div>
       </form>
