Adjust for cols titles in enteprise detail

--- a/dashboard/templates/admin/admin_enterprise_detail.html
+++ b/dashboard/templates/admin/admin_enterprise_detail.html
@@ -92,7 +92,7 @@
               <tr>
                 <th>ID USUARIO</th>
                 <th>Username</th>
-                <th>Proyectos Asignados</th>
+                <th># Proyectos</th>
                 <th>Accion</th>
               </tr>
             </thead>
@@ -122,7 +122,7 @@
                 <tr>
                   <th>ID USUARIO</th>
                   <th>Username</th>
-                  <th>Proyectos Asignados</th>
+                  <th># Proyectos</th>
                   <th>Accion</th>
                 </tr>
               </tfoot>
@@ -144,7 +144,7 @@
               <tr>
                 <th>ID PROYECTO</th>
                 <th>Nombre</th>
-                <th>Sistemas Asignados</th>
+                <th># de Sistemas </th>
                 <th>Accion</th>
               </tr>
             </thead>
@@ -176,7 +176,7 @@
                 <tr>
                   <th>ID PROYECTO</th>
                   <th>Nombre</th>
-                  <th>Sistemas Asignados</th>
+                  <th># de Sistemas </th>
                   <th>Accion</th>
                 </tr>
               </tfoot>
