--- a/dashboard/templates/admin/admin_sensorType_list.html
+++ b/dashboard/templates/admin/admin_sensorType_list.html
@@ -51,9 +51,9 @@
                   <td> {{sensor.updated_at}} </td>
 
                   {% if  project.id|isEven == 0%}
-                    <td> <span class="label label-danger">Pendiente Success</span> </td>
+                    <td> <span class="label label-danger">{{sensor.get_estatus_display }}</span> </td>
                   {% else %}
-                    <td> <span class="label label-success">Estatus Correcto</span> </td>
+                    <td> <span class="label label-success">{{sensor.get_estatus_display }}</span> </td>
                   {% endif %}
 
                   <td>
