--- a/dashboard/templates/admin/admin_sensorType_detail.html
+++ b/dashboard/templates/admin/admin_sensorType_detail.html
@@ -66,6 +66,8 @@
                 {{sensortype.get_data_type_display }}
             </dd>
 
+
+
             <dt>Archivo técnico</dt>
             <dd> {{sensortype.data_sheet }} </dd>
 
@@ -73,6 +75,21 @@
             <dd> {{sensortype.data_image }} </dd>
 
           </dl>
+
+          <div class="row">
+            <h3 class="text-center"> Archivos del Sensor </h3>
+            <div class="col-xs-6">
+              <a href="{{ MEDIA_URL }}{{sensortype.data_sheet }}" target="_blank">
+                <img src="http://placehold.it/180x180&amp;text=DATASHEET" alt="company logo">
+              </a>
+            </div>
+            <div class="col-xs-6">
+              <a href="{{ MEDIA_URL }}{{sensortype.data_sheet }}" target="_blank">
+                <img src="http://placehold.it/180x180&amp;text=IMAGE" alt="company logo">
+              </a>
+            </div>
+          </div>
+
         </div><!-- /.box-body -->
       </div><!-- /.box -->
     </div>
