Move client folder & arduino sensor related name

--- a/client/templates/client/user_iots.html
+++ b/client/templates/client/user_iots.html
@@ -65,7 +65,7 @@
                 </div><!-- /.box-header -->
                 <div class="box-body">
                   <dl class="dl-horizontal">
-                    <dt>Tipos de Sensores</dt>
+                    <dt>Cabtidad de Sensores</dt>
                     <dd>{{ arduino.sensors.count }} </dd>
                     <dt>Estatus</dt>
                     <dd><span class="label label-success">Correcto</span></dd>
