--- a/client/templates/client/user_selected_sensor.html
+++ b/client/templates/client/user_selected_sensor.html
@@ -204,9 +204,10 @@
 
 
   <script type="application/javascript">
+  var g ;
  var canUseSocket = false;
   var ws4redis = WS4Redis({
-    uri: 'ws://192.168.1.89:8000/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
+    uri: 'ws://dashboard:8000/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
     connecting: on_connecting,
     connected: on_connected,
     receive_message: receiveMessage,
@@ -233,45 +234,74 @@
 
   // receive a message though the websocket from the server
   function receiveMessage(msg) {
-
-    if(canUseSocket == true ){
-      var jso = JSON.parse(msg);
-      //console.log(jso);
-      console.log('Message from Websocket: ' + msg);
-      console.log(jso.length);
-
-      for(var i= 0 ; i < jso.length ; i++){
-        console.log(jso[i]['data']);
+    useWSData(msg);
+  }
 
 
-        if(jso[i]['arduino_sensor'] == {{arduinosensor.id}}  ){
+function useWSData(data){
 
-          console.log("Chi");
-          sensor_data_chart.push(jso[i]['data']);
+      if(canUseSocket == true ){
+        var jso = JSON.parse(data);
+        //console.log(jso);
+        console.log('Message from Websocket: ' + data);
+        console.log(jso.length);
 
-          var d = new Date(jso[i]['created_at']);
-          var d_days = d.getDate() + "/" + d.getMonth() + "/" + d.getFullYear();
-          var d_time = completeTimeFormat(d.getHours(), d.getMinutes(), d.getSeconds());
-          sensor_date_chart.push(d_time);
-          var lastPosition = _sensors_data.length;
+        for(var i= 0 ; i < jso.length ; i++){
+          console.log(jso[i]['data']);
 
-          _sensors_data.push(jso[i]);
-          console.log(_sensors_data);
-          console.log(lastPosition);
-           //_sensors_data[lastPosition]['data'] = jso[i]['data'];
 
-          dygraphs_data.push([d, _sensors_data[lastPosition]['data'], "10", "50"]);
-        }else{
-          console.log("ño");
-        }
+          if(jso[i]['arduino_sensor'] == {{arduinosensor.id}}  ){
+
+            console.log("Chi");
+            sensor_data_chart.push(jso[i]['data']);
+
+            var d = new Date(jso[i]['created_at']);
+            var d_days = d.getDate() + "/" + d.getMonth() + "/" + d.getFullYear();
+            var d_time = completeTimeFormat(d.getHours(), d.getMinutes(), d.getSeconds());
+            sensor_date_chart.push(d_time);
+            var lastPosition = _sensors_data.length;
+
+            $('#totalRegistros').html(lastPosition);
+
+            _sensors_data.push(jso[i]);
+            console.log(_sensors_data);
+            console.log(lastPosition);
+             //_sensors_data[lastPosition]['data'] = jso[i]['data'];
+
+            dygraphs_data.push([d, _sensors_data[lastPosition]['data'], "10", "50"]);
+
+            console.log("______");
+            console.log(g);
+            console.log("______");
+
+            g.destroy();
+
+            g = new Dygraph(document.getElementById("graphdiv"), dygraphs_data, {
+              drawPoints: true,
+              showRoller: true,
+              valueRange: [
+                0, 150
+              ],
+              height: 400,
+              //width: 100%,
+              highlightSeriesBackgroundAlpha: 0.8,
+              fillGraph: true,
+              includeZero: true,
+              strokeWidth: 3,
+              //showRangeSelector: true,
+              labels: ['Tiempo', 'Temperatura', 'Min', 'Max']
+            });
+
+
+          }else{
+            console.log("ño");
+          }
+      }
+    }else{
+      console.log("Esperaaaa....");
     }
-  }else{
-    console.log("Esperaaaa....");
-  }
 
-
-  }
-
+}
 
 
   var tableNameID = '#table_allData';
@@ -405,7 +435,7 @@
       drawPoints: true,
       showRoller: true,
       valueRange: [
-        0, 300
+        0, 100
       ],
       height: 400,
       //width: 100%,
