Parser jason and plain

--- a/client/templates/client/user_selected_sensor.html
+++ b/client/templates/client/user_selected_sensor.html
@@ -305,9 +305,9 @@ function useWSData(data){
 
 
   var tableNameID = '#table_allData';
-  var tokenCode = 'Token 6b4f2e70ae0d435bf512897355947fe0a564972a';
+  var tokenCode = 'Token 913ac3cc5ae3a881e238b1cd9fbfa70a75bc1237';
   var allData;
-  var urlApi = 'http://192.168.1.89:8000/api/arduinos/{{ arduinosensor.arduino.id }}/sensors/{{ arduinosensor.id }}/data/';
+  var urlApi = 'http://dashboard:8000/api/arduinos/{{ arduinosensor.arduino.id }}/sensors/{{ arduinosensor.id }}/data/';
 
   var _arduino;
   var _sensors;
