--- a/templates/landing/index.html
+++ b/templates/landing/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="css/base.css"  >
-    <link rel="stylesheet" type="text/css" href="css/jquery.pagepiling.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/colecto.css">
+    <link rel="stylesheet" type="text/css" href="../../static/landing/css/base.css"  >
+    <link rel="stylesheet" type="text/css" href="../../static/landing/css/jquery.pagepiling.css">
+    <link rel="stylesheet" type="text/css" href="../../static/landing/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../../static/landing/css/colecto.css">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jquery.pagepiling.min.js"></script>
-    <script type="text/javascript" src="js/wow.js"></script>
-    <script type="text/javascript" src="js/banregio.js"></script>
+    <script type="text/javascript" src="../../static/landing/js/jquery.pagepiling.min.js"></script>
+    <script type="text/javascript" src="../../static/landing/js/wow.js"></script>
+    <script type="text/javascript" src="../../static/landing/js/banregio.js"></script>
 
   </head>
 	<body>
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <img  class="top10px img-responsive imgCenter" src="imgs/2-logotipo.png">
+            <img  class="top10px img-responsive imgCenter" src="../../static/landing/imgs/2-logotipo.png">
           </div>
           <div class="collapse navbar-collapse" id="navbar-ex-collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -96,7 +96,7 @@
 
                         <br/><br/><br/>
                         <a href="#QueEs" target="_self">
-                          <img id="img_scroll" src="imgs/7-icon.png" class="">
+                          <img id="img_scroll" src="../../static/landing/imgs/7-icon.png" class="">
                         </a>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
 
               </div>
           </div>
-          <img id="img_sec2" src="imgs/1.png" class="img-responsive">
+          <img id="img_sec2" src="../../static/landing/imgs/1.png" class="img-responsive">
       </div>
     </div>
 
@@ -177,7 +177,7 @@
                 </a>
                 <br/><br/>
                 <div class="col-sm-12  hidden-xs">
-                  <img id="solution_img" class=" img-responsive imgCenter" src="imgs/solutions/solution_1.png">
+                  <img id="solution_img" class=" img-responsive imgCenter" src="../../static/landing/imgs/solutions/solution_1.png">
                 </div>
             </div>
 
@@ -199,7 +199,7 @@
             </div>
             <div class="row">
               <div class="col-sm-12 text-left  ">
-                <img id="solution_img" class="img-responsive imgCenter" src="imgs/5.png">
+                <img id="solution_img" class="img-responsive imgCenter" src="../../static/landing/imgs/5.png">
               </div>
             </div>
         </div>
@@ -231,9 +231,9 @@
 
             <div class="row">
                 <div class="col-sm-4 col-xs-6">
-                  <img class=" img-repeat-y img-responsive" src="imgs/19-line.png">
+                  <img class=" img-repeat-y img-responsive" src="../../static/landing/imgs/19-line.png">
                 <div class="products">
-                    <img class="hidden-xs img-responsive" src="imgs/15-icon.png">
+                    <img class="hidden-xs img-responsive" src="../../static/landing/imgs/15-icon.png">
                     <br/>
 
                     <div class="row">
@@ -266,16 +266,16 @@
           					<div class="text-right">
 
           						<span class="color_green"> Leer más</span>
-          						<img src="imgs/19-icon.png">
+          						<img src="../../static/landing/imgs/19-icon.png">
           					</div>
             				</a>
                   </div>
                 </div>
 
                 <div class="col-sm-4 col-xs-6">
-                    <img class="img-repeat-y img-responsive" src="imgs/21-line.png">
+                    <img class="img-repeat-y img-responsive" src="../../static/landing/imgs/21-line.png">
                     <div class="products">
-                        <img class="hidden-xs img-responsive" src="imgs/16-icon.png">
+                        <img class="hidden-xs img-responsive" src="../../static/landing/imgs/16-icon.png">
                         <br/>
                         <div class="row">
                           <div class="col-md-9 col-xs-6 ">
@@ -308,7 +308,7 @@
               				<div class="text-right">
                         <br/>
               					<span class="color_purple"> Leer más</span>
-              					<img src="imgs/18-icon.png">
+              					<img src="../../static/landing/imgs/18-icon.png">
               				</div>
               			</a>
                   </div>
@@ -316,9 +316,9 @@
 
 
                 <div class="col-sm-4 col-xs-12 ">
-                    <img class=" img-repeat-y  img-responsive" src="imgs/20-line.png">
+                    <img class=" img-repeat-y  img-responsive" src="../../static/landing/imgs/20-line.png">
                     <div class="products">
-                        <img class="hidden-xs img-responsive" src="imgs/17-icon.png">
+                        <img class="hidden-xs img-responsive" src="../../static/landing/imgs/17-icon.png">
                         <br/>
                         <div class="row">
                             <div class="col-md-6 col-xs-6">
@@ -349,7 +349,7 @@
                         <a href="productos.html#Producto3">
                 					<div class="text-right">
                 						<span class="color_yellow"> Leer más</span>
-                						<img src="imgs/20-icon.png">
+                						<img src="../../static/landing/imgs/20-icon.png">
                 					</div>
                 				</a>
                     </div>
@@ -388,7 +388,7 @@
 
               </div>
               <div class="col-md-7  text-center hidden-sm">
-                <img id="img_sec6" src="imgs/6.png" class="img-responsive">
+                <img id="img_sec6" src="../../static/landing/imgs/6.png" class="img-responsive">
               </div>
           </div>
 
@@ -416,7 +416,7 @@
               </div>
               <div class="col-xs-4 text-center">
                 <br/>
-                  <img class="img-responsive imgCenter" src="imgs/8-icon.png" width="40" height="40">
+                  <img class="img-responsive imgCenter" src="../../static/landing/imgs/8-icon.png" width="40" height="40">
 
               </div>
               <div class="col-xs-4 ">
