--- a/templates/landing/productos.html
+++ b/templates/landing/productos.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="css/base.css"  >
-    <link rel="stylesheet" type="text/css" href="css/jquery.pagepiling.css">
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/colecto.css">
+    <link rel="stylesheet" type="text/css" href="../../static/landing/css/base.css"  >
+    <link rel="stylesheet" type="text/css" href="../../static/landing/css/jquery.pagepiling.css">
+    <link rel="stylesheet" type="text/css" href="../../static/landing/css/animate.css">
+    <link rel="stylesheet" type="text/css" href="../../static/landing/css/colecto.css">
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/jquery.pagepiling.min.js"></script>
-    <script type="text/javascript" src="js/wow.js"></script>
-    <script type="text/javascript" src="js/banregio.js"></script>
+    <script type="text/javascript" src="../../static/landing/js/jquery.pagepiling.min.js"></script>
+    <script type="text/javascript" src="../../static/landing/js/wow.js"></script>
+    <script type="text/javascript" src="../../static/landing/js/banregio.js"></script>
 
   </head>
 	<body>
@@ -29,7 +29,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <img  class="top10px img-responsive imgCenter" src="imgs/2-logotipo.png">
+          <img  class="top10px img-responsive imgCenter" src="../../static/landing/imgs/2-logotipo.png">
         </div>
         <div class="collapse navbar-collapse" id="navbar-ex-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -78,7 +78,7 @@
 
 	  <div id="pagepiling">
 
-    <div class="section cover-image" style="background-image : url('imgs/productos/1-slider.jpg')" id="products_home">
+    <div class="section cover-image" style="background-image : url('../../static/landing/imgs/productos/1-slider.jpg')" id="products_home">
         <div class="cover">
             <div class="container">
                 <div class="row">
@@ -96,7 +96,7 @@
                         </div>
 
                         <br/><br/><br/>
-                        <img id="img_vermas" src="imgs/productos/2-icon.jpg" class="">
+                        <img id="img_vermas" src="../../static/landing/imgs/productos/2-icon.jpg" class="">
                     </div>
                 </div>
             </div>
@@ -107,9 +107,9 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-offset-8 col-sm-4">
-            <img class="img-responsive" src="imgs/19-line.png">
+            <img class="img-responsive" src="../../static/landing/imgs/19-line.png">
             <div class="products">
-              <img class="img-responsive" src="imgs/15-icon.png">
+              <img class="img-responsive" src="../../static/landing/imgs/15-icon.png">
               <br/>
               <div class="row">
                 <div class="col-md-6 col-sm-12">
@@ -147,9 +147,9 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-offset-8 col-sm-4">
-            <img class="img-responsive" src="imgs/21-line.png">
+            <img class="img-responsive" src="../../static/landing/imgs/21-line.png">
             <div class="products">
-                <img class="img-responsive" src="imgs/16-icon.png">
+                <img class="img-responsive" src="../../static/landing/imgs/16-icon.png">
                 <br/>
                 <div class="row">
                   <div class="col-md-9 col-sm-12 ">
@@ -196,9 +196,9 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-offset-8 col-sm-4">
-          <img class="img-responsive" src="imgs/20-line.png">
+          <img class="img-responsive" src="../../static/landing/imgs/20-line.png">
           <div class="products">
-              <img class="img-responsive" src="imgs/17-icon.png">
+              <img class="img-responsive" src="../../static/landing/imgs/17-icon.png">
               <br/>
               <div class="row">
                   <div class="col-md-6 col-sm-12">
